# python-server

./: CLAUDE.md  README.md  STATE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml
deploy/app/: values-api.yaml  values-worker.yaml
deploy/web/: values-web.yaml
docs/: API-OVERVIEW.md  ARCHITECTURE.md  CONTEXT-PROTOCOL.md  DOWNLOAD-FLOW.md  demo-architecture.md  highlevel-api-overview.md
src/: auth.py  auth_schemas.py  config.py  main.py  models.py  schemas.py  sse.py  storage.py  tasks.py
tests/: conftest.py  test_auth.py  test_health.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  AuthPage.tsx  JobDetailPage.tsx  JobsPage.tsx  api.ts  styles.css
